// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabList /> should accept className 1`] = `
<ul
  class="foobar"
  role="tablist"
/>
`;

exports[`<TabList /> should allow for higher order components 1`] = `
<div
  class="react-tabs"
  data-rttabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="panel:r0:0"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      data-rttab="true"
      id="tab:r0:0"
      role="tab"
      tabindex="0"
    >
      Foo
    </li>
    <li
      aria-controls="panel:r0:1"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-rttab="true"
      id="tab:r0:1"
      role="tab"
    >
      Bar
    </li>
  </ul>
  <div
    aria-labelledby="tab:r0:0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="panel:r0:0"
    role="tabpanel"
  >
    Foo
  </div>
  <div
    aria-labelledby="tab:r0:1"
    class="react-tabs__tab-panel"
    id="panel:r0:1"
    role="tabpanel"
  />
</div>
`;

exports[`<TabList /> should display the custom classnames for selected and disabled tab 1`] = `
<div
  class="react-tabs"
  data-rttabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="panel:r0:0"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab active"
      data-rttab="true"
      id="tab:r0:0"
      role="tab"
      tabindex="0"
    >
      Foo
    </li>
    <li
      aria-controls="panel:r0:1"
      aria-disabled="true"
      aria-selected="false"
      class="react-tabs__tab disabled"
      data-rttab="true"
      id="tab:r0:1"
      role="tab"
    >
      Bar
    </li>
  </ul>
  <div
    aria-labelledby="tab:r0:0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="panel:r0:0"
    role="tabpanel"
  >
    Foo
  </div>
  <div
    aria-labelledby="tab:r0:1"
    class="react-tabs__tab-panel"
    id="panel:r0:1"
    role="tabpanel"
  />
</div>
`;

exports[`<TabList /> should display the custom classnames for selected and disabled tab specified on tabs 1`] = `
<div
  class="react-tabs"
  data-rttabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="panel:r0:0"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab active"
      data-rttab="true"
      id="tab:r0:0"
      role="tab"
      tabindex="0"
    >
      Foo
    </li>
    <li
      aria-controls="panel:r0:1"
      aria-disabled="true"
      aria-selected="false"
      class="react-tabs__tab disabled"
      data-rttab="true"
      id="tab:r0:1"
      role="tab"
    >
      Bar
    </li>
  </ul>
  <div
    aria-labelledby="tab:r0:0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="panel:r0:0"
    role="tabpanel"
  >
    Foo
  </div>
  <div
    aria-labelledby="tab:r0:1"
    class="react-tabs__tab-panel"
    id="panel:r0:1"
    role="tabpanel"
  />
</div>
`;

exports[`<TabList /> should have sane defaults 1`] = `
<ul
  class="react-tabs__tab-list"
  role="tablist"
/>
`;

exports[`<TabList /> should not allow overriding all default properties 1`] = `
<ul
  class="react-tabs__tab-list"
  role="tablist"
/>
`;

exports[`<TabList /> should pass through custom properties 1`] = `
<ul
  class="react-tabs__tab-list"
  data-tooltip="Tooltip contents"
  role="tablist"
/>
`;

exports[`<TabList /> should retain the default classnames for active and disabled tab 1`] = `
<div
  class="react-tabs"
  data-rttabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="panel:r0:0"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      data-rttab="true"
      id="tab:r0:0"
      role="tab"
      tabindex="0"
    >
      Foo
    </li>
    <li
      aria-controls="panel:r0:1"
      aria-disabled="true"
      aria-selected="false"
      class="react-tabs__tab react-tabs__tab--disabled"
      data-rttab="true"
      id="tab:r0:1"
      role="tab"
    >
      Bar
    </li>
  </ul>
  <div
    aria-labelledby="tab:r0:0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="panel:r0:0"
    role="tabpanel"
  >
    Foo
  </div>
  <div
    aria-labelledby="tab:r0:1"
    class="react-tabs__tab-panel"
    id="panel:r0:1"
    role="tabpanel"
  />
</div>
`;
